--- a/css/colors-dark.css
+++ b/css/colors-dark.css
@@ -383,6 +383,7 @@ body.colors-dark,
 }
 
 .colors-dark pre,
+.colors-dark code,
 .colors-dark mark,
 .colors-dark ins,
 .colors-dark input[type="text"],
