click show detail
1. 对 `code` 标签样式进行微小更改
2. 对 `pre` 标签对应的滚动条外观进行更改
3. 由外置json控制所有html内的菜单.
4. 对音乐盒的播放暂停记忆功能进行完善.
5. 对显示文章格式进行修改, 包括对指定文章url的更改, 并且使得可以自订文章Markdown文件所储存的目录位置.
6. 删除不必要的文件
7. 更名博客页面为笔记页面
8. 移动了原来Markdown所在的位置.

--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,10 @@ samp {
 	font-size: 1em;
 }
 
+code {
+	padding: 2px 5px;
+}
+
 dfn {
 	font-style: italic;
 }
@@ -535,6 +539,23 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
+}
+
+pre::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+}
+
+pre::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	background: rgba(255,255,255,0.2);
+}
+
+pre::-webkit-scrollbar-track {
+	border-radius: 10px;
+	background: rgba(0,0,0,0.1);
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
 }
 
 code,
