--- a/src/common/style/style.css
+++ b/src/common/style/style.css
@@ -558,6 +558,23 @@ pre::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
 }
 
+code::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+
+code::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	background: rgba(255,255,255,0.2);
+}
+
+code::-webkit-scrollbar-track {
+	border-radius: 10px;
+	background: rgba(0,0,0,0.1);
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+}
+
 code,
 kbd,
 tt,
