--- a/src/common/style/markdown-style.css
+++ b/src/common/style/markdown-style.css
@@ -18,6 +18,7 @@
 .code-tool-line-copy {
     cursor: pointer;
     opacity: 1;
+    margin: 8px;
 }
 
 .code-line-number {
@@ -29,6 +30,7 @@
     color: #ccc;
     border-right: solid #3e403c 3px;
     text-align: right;
+    border-radius: 0px !important;
 }
 
 .code-line-number span {
@@ -63,7 +65,12 @@ span[line-row]>span::before {
 }
 
 .code-pre * {
-    font-family: "DejaVuSansMono", monospace
+    font-family: "DejaVuSansMono", monospace;
+}
+
+.code-pre pre {
+    border-radius: 10px;
+    padding: 0.8em;
 }
 
 @font-face {
@@ -76,4 +83,5 @@ blockquote {
     padding: 5px;
     overflow: inherit;
     background-color: #333;
+    border-radius: 0 10px 10px 0;
 }
