--- a/src/common/style/addtion.style.css
+++ b/src/common/style/addtion.style.css
@@ -2,6 +2,17 @@
     position: fixed;
     bottom: 5vh;
     right: 5vw;
+    opacity: 0.25;
+    width: 24px;
+    height: 24px;
+    transition:
+        opacity 0.5s,
+        height  0.5s,
+        width   0.5s;
+}
+
+.scroll-to-top:hover {
+    opacity: 1;
     width: 48px;
     height: 48px;
 }
