--- a/src/common/style/addtion.style.css
+++ b/src/common/style/addtion.style.css
@@ -16,3 +16,39 @@
     width: 48px;
     height: 48px;
 }
+
+@media screen and (min-width:768px) {
+    #secondary {
+        position: sticky;
+        top: 100px;
+        overflow-y: hidden;
+        max-height: 76vh;
+        padding: 0px !important;
+        transition: scrollbar-color 1s linear;
+    }
+
+    #secondary:hover {
+        overflow-y: scroll;
+    }
+
+    #secondary .widget:last-child {
+        padding: 0px !important;
+    }
+
+    #secondary::-webkit-scrollbar {
+        width: 4px;
+        height: 8px;
+        background-color: transparent;
+    }
+
+    #secondary::-webkit-scrollbar-thumb {
+        border-radius: 10px !important;
+        -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+        background: rgba(255,255,255,0.2);
+    }
+
+    #secondary::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+
+}
