--- a/src/common/style/addtion.style.css
+++ b/src/common/style/addtion.style.css
@@ -17,6 +17,10 @@
     height: 48px;
 }
 
+blockquote {
+    padding: 0 5px !important;
+}
+
 @media screen and (min-width:768px) {
     #secondary {
         position: sticky;
